update ui for RecyclerView

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,9 +10,11 @@
     <!-- The default font for RecyclerView items is too small.
     The margin is a simple delimiter between the words. -->
     <style name="recipe_title">
-        <item name="android:layout_marginBottom">10dp</item>
-        <item name="android:paddingLeft">10dp</item>
-        <item name="android:background">@android:color/holo_blue_light</item>
+        <item name="android:layout_marginBottom">1dp</item>
+        <item name="android:textAppearance">@android:style/TextAppearance.Large</item>
+    </style>
+
+    <style name="recipe_remove_button">
         <item name="android:textAppearance">@android:style/TextAppearance.Large</item>
     </style>
 </resources>
