--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,13 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textView"
-        style="@style/recipe_title"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/holo_orange_light" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/textView"
+            style="@style/recipe_title"
+            android:layout_width="288dp"
+            android:layout_height="69dp"
+            android:layout_weight="0.9"
+            android:gravity="center"
+            android:maxLines = "2"
+            android:background="@android:color/background_light" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="69dp"
+            android:layout_height="69dp"
+            android:layout_weight="0.09"
+            android:background="@color/buttonLabel"
+            android:contentDescription= "@string/remove_item"
+            app:srcCompat="@drawable/ic_baseline_remove_24" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Space
+            android:layout_width="10dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.15"
+            />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_weight="0.7"
+            android:background="@android:color/darker_gray"/>
+
+        <Space
+            android:layout_width="10dp"
+            android:layout_weight="0.15"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+
 </LinearLayout>
