--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="buttonLabel">#FFFFFF</color>
+    <color name="background">#FFFFFF</color>
+    <color name="blue_200">#33B9DB</color>
+    <color name="blue_500">#2FB2D2</color>
+    <color name="blue_700">#22798E</color>
 </resources>
