--- a/app/src/main/res/layout/activity_current_recipe.xml
+++ b/app/src/main/res/layout/activity_current_recipe.xml
@@ -44,6 +44,7 @@
             android:textSize="18sp" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview_steps"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
