--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/productsFragment"
-        android:name="com.example.recipeadviser.ProductsFragment"
+        android:name="com.example.recipeadviser.ui.fragments.ProductsFragment"
         android:label="ProductsFragment" >
         <action
             android:id="@+id/action_productsFragment_to_listFragment"
@@ -15,11 +15,15 @@
     </fragment>
     <fragment
         android:id="@+id/listFragment"
-        android:name="com.example.recipeadviser.ListFragment"
+        android:name="com.example.recipeadviser.ui.fragments.RecipeListFragment"
         android:label="fragment_list"
-        tools:layout="@layout/fragment_list" >
+        tools:layout="@layout/fragment_recipe_list" >
         <action
             android:id="@+id/action_listFragment_to_productsFragment"
             app:destination="@id/productsFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.recipeadviser.ui.fragments.LoginFragment"
+        android:label="LoginFragment" />
 </navigation>
