--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -2,5 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <ExpandableListView
+        android:id="@+id/expandable_product_list"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="0.5dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
