--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,9 +21,20 @@
         <action
             android:id="@+id/action_listFragment_to_productsFragment"
             app:destination="@id/productsFragment" />
+        <action
+            android:id="@+id/action_listFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.example.recipeadviser.ui.fragments.LoginFragment"
         android:label="LoginFragment" />
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.example.recipeadviser.ui.SettingsFragment"
+        android:label="SettingsFragment" >
+        <action
+            android:id="@+id/action_settingsFragment_to_listFragment"
+            app:destination="@id/listFragment" />
+    </fragment>
 </navigation>
