--- a/app/src/main/res/layout/current_recipe_step_item.xml
+++ b/app/src/main/res/layout/current_recipe_step_item.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <LinearLayout
-        android:orientation="horizontal"
+    android:layout_height="wrap_content"
+    app:cardBackgroundColor="@android:color/transparent"
+    app:cardCornerRadius="5dp"
+    app:cardElevation="0dp">
+    <pl.hypeapp.materialtimelineview.MaterialTimelineView
+        android:id="@+id/item_steps_timeline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints">
+        android:background="@android:color/holo_blue_light"
+        android:padding="16dp"
+        app:timeline_margin_start="32dp"
+        app:timeline_position="middle"
+        app:timeline_type="item">
         <TextView
             android:id="@+id/step_description"
-            style="@style/recipe_title"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="start"
-            android:background="@android:color/background_light" />
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            />
+    </pl.hypeapp.materialtimelineview.MaterialTimelineView>
+</androidx.cardview.widget.CardView>
