--- a/app/src/main/res/layout/current_recipe_step_item.xml
+++ b/app/src/main/res/layout/current_recipe_step_item.xml
@@ -16,10 +16,50 @@
         app:timeline_margin_start="32dp"
         app:timeline_position="middle"
         app:timeline_type="item">
-        <TextView
-            android:id="@+id/step_description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/step_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+
+                <ImageButton
+                    android:id="@+id/start_timer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_baseline_play_arrow_24" />
+
+                <ImageButton
+                    android:id="@+id/restart_timer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/ic_baseline_replay_24" />
+
+                <TextView
+                    android:id="@+id/time_left"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="@color/white"
+                    android:layout_margin="7dp"
+                    android:textAlignment="gravity"/>
+
+                <Space
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+
     </pl.hypeapp.materialtimelineview.MaterialTimelineView>
 </androidx.cardview.widget.CardView>
